syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.replication.DataNode";
option java_outer_classname = "DataNode";
option objc_class_prefix = "HLW";

package message;

message DataPayload {
  string key = 1;
  string value = 2;
  string dataNodeId = 3;
}

service DataNodeStreamer {
  rpc healthPoll(DataPayload) returns (DataPayload) {}
  rpc setData(DataPayload) returns (DataPayload) {}
  rpc getData(DataPayload) returns (DataPayload) {}
  rpc removeData(DataPayload) returns (DataPayload) {}
}
